<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/loginpage"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4 "
        android:background="@color/purple" >



    </RelativeLayout >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="28dp"
        android:gravity="center"
        android:layout_above="@+id/card_view">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/merci_pour_rejoindre_notre_famille_papa_amuses_toi_en_utilisanty_cette_application"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:gravity="center"
                android:text="bonjour_papa_connecter_toi" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="nom d'utilisateur"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_person_24"
                android:hint="@string/nom_d_uilisateur"
                android:textColor="@color/black"
                android:drawablePadding="10dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mot_de_passe"
                android:alpha="0.7"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:hint="@string/mot_de_passe"
                android:textColor="@color/black"
                android:drawablePadding="10dp"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addresse_email" />

            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_alternate_email_24"
                android:hint="@string/saisi_votre_adesse_email"
                android:inputType="textEmailAddress"
                android:drawablePadding="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/RegisterButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/enregistrer" />
            </RelativeLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>




</RelativeLayout>