<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/login"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4 "
        android:background="@color/purple" >


    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="28dp"
        android:gravity="center"
        android:layout_above="@+id/card_view">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
           android:text="@string/bienvenu_papa"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:shadowRadius="@integer/material_motion_duration_medium_2"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp"
           >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:gravity="center"
                android:text="bonjour_papa_connecter_toi" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="nom d'utilisateur"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawableRight="@drawable/baseline_person_24"
                android:hint="@string/nom_d_uilisateur"
                android:textColor="@color/black" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mot_de_passe"
                android:alpha="0.7"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawableRight="@drawable/baseline_lock_24"
                android:hint="@string/mot_de_passe"
                android:textColor="@color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                android:id="@+id/RegisterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Se connecter"/>

                <Button
                    android:id="@+id/disloginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/se_deconnecter"
                    android:layout_alignParentEnd="true"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ExtraText">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/souvenir_de_moi"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"
                    tools:ignore="RelativeOverlap" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ajouter Nouveau Compt"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:onClick="launchRegisterActivity"/><!-- pour lier le boutton avec sa fonctionnalite de la page registerActivityt-->

                    />

            </RelativeLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>





</RelativeLayout>